--- a/ingress/minimal-ingress.yaml
+++ b/ingress/minimal-ingress.yaml
@@ -2,16 +2,27 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: minimal-ingress
-  namespace: app
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  ingressClassName: nginx-example
+  ingressClassName: nginx
   rules:
-    - http:
+    - host: localhost
+      http:
         paths:
-          - path: /test
+          - path: /apache
             pathType: Prefix
             backend:
               service:
-                name: test-service
+                name: apache-service
+                port:
+                  number: 5050
+
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: nginx-service
                 port:
                   number: 80
+
